--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
@@ -21,7 +22,10 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-loader-spinner": "^8.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.1"
   },
