--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.12",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
